--- a/Calculator/Base.lproj/Main.storyboard
+++ b/Calculator/Base.lproj/Main.storyboard
@@ -471,7 +471,7 @@
                                 </subviews>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="trailingMargin" secondItem="OGe-Ni-Xzc" secondAttribute="trailing" id="Aw6-aP-ovF"/>
                             <constraint firstAttribute="leadingMargin" secondItem="OGe-Ni-Xzc" secondAttribute="leading" id="OVf-jk-rK4"/>
